[package]
name = "dicer"
version = "0.1.0"
authors = ["gnullbyte <gnullbyte@gmail.com>"]
edition = "2018"
description = "Dice Roller"
license = "MIT OR Apache-2.0"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rusty-hook = "^0.11.2"
