[package]
name = "dicer"
version = "0.2.1"
authors = ["gnullbyte <gnullbyte@gmail.com>"]
edition = "2018"
description = "Dice Roller"
license = "MIT OR Apache-2.0"
repository = "https://github.com/gnullByte/dicer"
homepage = "https://github.com/gnullByte/dicer"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.0"

[dev-dependencies]
rusty-hook = "^0.11.2"
